2009-01-11	Pablo Polvorin	<pablo.polvorin@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix typo, initial update
	to new hooks API (using binaries). mod_pubsub is still
	unusable with exmpp.

	* src/mod_caps.erl, src/ejabberd_c2s.erl: Apply commit
	1212 (caps handling fix), was incorrectly overwritten on 
	1770.

2009-01-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix owners cache and fix unsubscribe
	permissions (thanks to Andy Skelton)(EJAB-840)
	* src/mod_pubsub/node_default.erl: Likewise

2009-01-10	Pablo Polvorin	<pablo.polvorin@process-one.net>

	* src/mod_vcard_odbc.erl: Fix bug in user search.

	* src/mod_vcard_ldap.erl, src/mod_vcard.erl, src/mod_configure.erl,
	src/ejabberd_sm.erl, src/mod_privacy_odbc.erl, src/ejabberd_c2s.erl,
	src/ejabberd_local.erl, src/mod_privacy.erl, src/mod_adhoc.erl,
	src/mod_pubsub/mod_pubsub.erl, src/mod_vcard_odbc.erl, src/mod_stats.erl,
	src/mod_last.erl, src/mod_private.erl, src/mod_roster.erl, 
	src/mod_disco.erl, src/mod_private_odbc.erl, src/mod_configure2.erl,
	src/mod_roster_odbc.erl, src/mod_register.erl, src/mod_version.erl,
	src/mod_caps.erl, src/mod_last_odbc.erl, src/mod_time.erl: Update 
	gen_iq_handler API, require the 'Host' argument to be in binary() format.

2009-01-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_default.erl: fix unsubscription of full jid
	subscribed node (thanks to Andy Skelton)(EJAB-839)

2009-01-09	Pablo Polvorin	<pablo.polvorin@process-one.net>

	* src/mod_muc/mod_muc_room.erl, src/mod_muc/mod_muc.erl
	src/mod_offline_odbc.erl, src/mod_irc/mod_irc_connection.erl,
	src/mod_irc/mod_irc.erl, src/ejabberd_c2s.erl, src/ejabberd_local.erl,
	src/mod_pubsub/mod_pubsub.erl, src/ejabberd_s2s.erl, src/mod_roster.erl,
	src/mod_roster_odbc.erl, src/ejabberd_s2s_out.erl, src/mod_offline.erl, 
	src/translate.erl: Adapt to new exmpp API where get_id/1, get_lang/1, 